# ansible-role-tripleo-baremetal-virt-undercloud

./: .gitignore  setup.cfg
defaults/: main.yml
handlers/: main.yml
playbooks/: tripleo.yml
tasks/: main.yml
templates/: ifcfg-interface.j2
tests/: test.yml
vars/: main.yml
