[metadata]
name = ansible-role-tripleo-baremetal-virt-undercloud
summary = ansible-role-tripleo-baremetal-virt-undercloud - A ansible role for deploying a tripleo overcloud using virt undercloud
description-file =
    README.md
author = RDO-CI Team
author-email = ralndy@redhat.com
home-page = https://github.com/redhat-openstack/ansible-role-tripleo-baremetal-virt-undercloud
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/defaults = ../ansible-role-tripleo-baremetal-virt-undercloud/defaults/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/handlers = ../ansible-role-tripleo-baremetal-virt-undercloud/handlers/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/meta = ../ansible-role-tripleo-baremetal-virt-undercloud/meta/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/tasks = ../ansible-role-tripleo-baremetal-virt-undercloud/tasks/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/templates = ../ansible-role-tripleo-baremetal-virt-undercloud/templates/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/files = ../ansible-role-tripleo-baremetal-virt-undercloud/files/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/tests = ../ansible-role-tripleo-baremetal-virt-undercloud/tests/*
    usr/local/share/ansible-role-tripleo-baremetal-virt-undercloud/vars = ../ansible-role-tripleo-baremetal-virt-undercloud/vars/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
